--- a/_posts/2023-10-22-Vue3 프로젝트 구성.md
+++ b/_posts/2023-10-22-Vue3 프로젝트 구성.md
@@ -2,7 +2,8 @@
 layout: post
 title:  "Vue3 프로젝트 생성"
 date:   2023-10-22 16:30:00 +0900
-categories: Vue
+categories: [Vue]
+tags: []
 ---
 
 ## 프로젝트 생성 명령어
