--- a/_posts/2023-10-22-Vue3 프로젝트 구성.md
+++ b/_posts/2023-10-22-Vue3 프로젝트 구성.md
@@ -12,7 +12,7 @@ npm init vue
 ```
 
 <div>
-    <img src="/assets/img/2023-10-22/npm_vue_init_img.png" alt="npm init vue">
+    <img src="/assets/img/2023-10-22/npm_vue_init_img.png" alt="npm init vue" />
 </div>
 
 - Project Name: vue-project 
@@ -29,7 +29,7 @@ npm init vue
 </p>
 
 ### 설치된 모습
-<img src="/assets/img/2023-10-22/vue_init_setup_after.png" alt="vue init folder structure">
+<img src="/assets/img/2023-10-22/vue_init_setup_after.png" alt="vue init folder structure" />
 
 ### 의존성 모듈 설치
 ```shell
@@ -41,12 +41,10 @@ npm install
 ```shell
 npm run dev
 ```
-<center>
-    <img src="/assets/img/2023-10-22/vue_npm_run_dev.png" alt="vue npm run serve">
-</center>
+<img src="/assets/img/2023-10-22/vue_npm_run_dev.png" alt="vue npm run serve" />
 
 <div>
-    <img src="/assets/img/2023-10-22/vue_npm_run_dev_browser.png" alt="vue run">
+    <img src="/assets/img/2023-10-22/vue_npm_run_dev_browser.png" alt="vue run" />
 </div>
 
 ### ESLint 설정
