--- a/_posts/2023-11-01-css 한글, 영어 폰트 다르게 하기.md
+++ b/_posts/2023-11-01-css 한글, 영어 폰트 다르게 하기.md
@@ -3,5 +3,27 @@ layout: post
 title: "CSS 한글 영어 폰트 다르게 적용하기"
 date: 2023-11-01 
 categories: [CSS]
-tags: [CSS]
+tags: [CSS, unicode-range]
 ---
+
+## unicode-range
+unicode-range는 폰트의 범위를 지정하는 속성이다. 해당 속성을 사용해서 한글과 영어의 폰트를 각각 다르게 지정해보자.
+
+- **한글 unicode**: U+AC00-D7A3
+- **영어 unicode**: U+0041-005A, U+0061-007A
+
+```css
+@font-face {
+    font-family:'Roboto';
+	src:url('font/Roboto-Regular.woff') format('woff');
+	unicode-range: U+AC00-D7A3;	/* 한글 */
+}
+
+@font-face {
+    font-family:'Roboto';
+	src:url('font/Roboto-Regular.woff') format('woff');
+	unicode-range: U+0041-005A, U+0061-007A;	/* 영어 */
+}
+```
+
+[유니코드 차트](https://www.unicode.org/charts/)
