--- a/_posts/2023-11-01-css 한글, 영어 폰트 다르게 하기.md
+++ b/_posts/2023-11-01-css 한글, 영어 폰트 다르게 하기.md
@@ -6,6 +6,30 @@ categories: [CSS]
 tags: [CSS, unicode-range]
 ---
 
+<style>
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+	unicode-range: U+AC00-D7A3; /* 한글 */
+}
+
+@font-face {
+  font-family: 'Griffy';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/griffy/v22/FwZa7-ox2FQh9kfAT96F.woff2) format('woff2');
+  unicode-range: U+0041-005A, U+0061-007A; /* 영어 */
+}
+
+.show-diff {
+	font-family: 'Pretendard-Regular', 'Griffy';
+}
+</style>
+
+
 ## unicode-range
 unicode-range는 폰트의 범위를 지정하는 속성이다. 해당 속성을 사용해서 한글과 영어의 폰트를 각각 다르게 지정해보자.
 
@@ -14,16 +38,31 @@ unicode-range는 폰트의 범위를 지정하는 속성이다. 해당 속성을
 
 ```css
 @font-face {
-    font-family:'Roboto';
-	src:url('font/Roboto-Regular.woff') format('woff');
-	unicode-range: U+AC00-D7A3;	/* 한글 */
+	font-family: 'Pretendard-Regular';
+	src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+	unicode-range: U+AC00-D7A3; /* 한글 */
 }
 
 @font-face {
-    font-family:'Roboto';
-	src:url('font/Roboto-Regular.woff') format('woff');
-	unicode-range: U+0041-005A, U+0061-007A;	/* 영어 */
+	font-family: 'Griffy';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/griffy/v22/FwZa7-ox2FQh9kfAT96F.woff2) format('woff2');
+	unicode-range: U+0041-005A, U+0061-007A; /* 영어 */
+}
+
+.show-diff {
+	font-family: 'Pretendard-Regular', 'Griffy';
 }
 ```
 
-[유니코드 차트](https://www.unicode.org/charts/)
+<p class="show-diff">
+프리텐다드는 한글에 적용합니다.
+<br />
+Griffy font applies to English
+</p>
+
+[**유니코드 찾기**](https://www.unicode.org/charts/)
